--- a/style.css
+++ b/style.css
@@ -19,8 +19,17 @@ body {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   padding: 18px 15px;
 }
+/* Displays */
 
-.display {
+.displays {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+}
+.display-one {
+  flex: 1;
   font-size: 50px;
   text-align-last: right;
   background-color: #422b2b;
@@ -28,7 +37,18 @@ body {
   padding: 20px;
   border-radius: 15px;
 }
-
+.display-two {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  padding: 34px 15px;
+  min-width: 20px;
+  background-color: #422b2b;
+  color: #f2d5da;
+  border-radius: 15px;
+}
+/* Operation */
 .operation {
   box-sizing: border-box;
   display: grid;
