--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ body {
   width: 71px;
 }
 
+.del {
+  width: 75px;
+  height: 75;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .operators > button {
   width: 100px;
   text-align: center;
